--- a/_layouts/distill.html
+++ b/_layouts/distill.html
@@ -90,26 +90,28 @@
 
         {{ content }}
         
-        {%- if site.disqus_shortname and page.comments -%}
-       <div id="disqus_thread"></div>
-        <script type="text/javascript">
-          var disqus_shortname  = '{{ site.disqus_shortname }}';
-          var disqus_identifier = '{{ page.id }}';
-          var disqus_title      = {{ page.title | jsonify }};
-          (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-                      })();
-        </script>
-        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>   
-    {%- endif %}
-        
       </d-article>
 
       <d-appendix>
         <d-footnote-list></d-footnote-list>
         <d-citation-list></d-citation-list>
+      </d-appendix>
+      
+      <d-appendix>
+        {%- if site.disqus_shortname and page.comments -%}
+         <div id="disqus_thread"></div>
+          <script type="text/javascript">
+            var disqus_shortname  = '{{ site.disqus_shortname }}';
+            var disqus_identifier = '{{ page.id }}';
+            var disqus_title      = {{ page.title | jsonify }};
+            (function() {
+              var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+              dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+              (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                        })();
+          </script>
+          <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>   
+        {%- endif %}
       </d-appendix>
 
     </div>
