--- a/_layouts/distill.html
+++ b/_layouts/distill.html
@@ -26,14 +26,7 @@
       "authors": [
         {% for author in page.authors -%}
         {
-          "author": "{{ author.name }}",
-          "authorURL": "{{ author.url }}",
-          "affiliations": [
-            {
-              "name": "{{ author.affiliations.name }}",
-              "url": "{{ author.affiliations.url }}"
-            }
-          ]
+          "author": "{{ author.name }}"
         }{% if forloop.last == false %},{% endif %}
         {% endfor %}
       ],
