--- a/_layouts/distill.html
+++ b/_layouts/distill.html
@@ -26,7 +26,14 @@
       "authors": [
         {% for author in page.authors -%}
         {
-          "author": "{{ author.name }}"
+          "author": "{{ author.name }}",
+          "authorURL": "{{ author.url }}",
+          "affiliations": [
+            {
+              "name": "{{ author.affiliations.name }}",
+              "url": "{{ author.affiliations.url }}"
+            }
+          ]
         }{% if forloop.last == false %},{% endif %}
         {% endfor %}
       ],
