--- a/_layouts/distill.html
+++ b/_layouts/distill.html
@@ -42,7 +42,7 @@
           {
             "left": "$",
             "right": "$",
-            "display": false
+            "display": true
           },
           {
             "left": "$$",
