--- a/_layouts/distill.html
+++ b/_layouts/distill.html
@@ -42,7 +42,7 @@
           {
             "left": "$",
             "right": "$",
-            "display": true
+            "display": false
           },
           {
             "left": "$$",
@@ -67,7 +67,7 @@
         <p>{{ page.description }}</p>
       </d-title>
 
-      <!-- <d-byline></d-byline> -->
+      <d-byline></d-byline>
 
       <d-article>
         {% if page.toc -%}
