--- a/_sass/_distill.scss
+++ b/_sass/_distill.scss
@@ -4,7 +4,7 @@
 
 d-byline {
   border-top-color: var(--global-divider-color) !important;
-  visibility: hidden;
+  display: none;
 }
 
 d-byline h3 {
